Factorize type summary templates

--- a/templates/type_summary.html
+++ b/templates/type_summary.html
@@ -1,9 +1,9 @@
-@require(prop_type, prop_name)
+@require(type_type, type_name)
 <tr>
     <td class="property_type">
-	    <span>@prop_type</span>
+	    <span>@type_type</span>
     </td>
     <td class="property_name">
-	    <span>@prop_name</span>
+	    <span>@type_name</span>
     </td>
 </tr>
