html templates cleanup mostly done

--- a/templates/enum_detail.html
+++ b/templates/enum_detail.html
@@ -2,7 +2,7 @@
 <div class="refsect2">
 	<a name="#@enum.type_name"></a>
 	<h3 class="method">
-		<span class="entry" id="@enum.type_name">enum @enum.type_name</span>
+		<span class="entry" id="@enum.type_name">The <code>“@enum.type_name”</code> enumeration</span>
 	</h3>
 	<p>
 	@enum.formatted_doc
