--- a/templates/symbol_detail.html
+++ b/templates/symbol_detail.html
@@ -1,8 +1,8 @@
-@require(name, linkname, prototype, doc, param_docs)
+@require(name, symbol_type, linkname, prototype, doc, param_docs)
 <div class="refsect2">
 	<a name=@linkname></a>
 	<h3 class="method">
-		<span class="entry" id=@linkname>@name</span>
+		<span class="entry" id=@linkname>The <code>“@name”</code> @symbol_type</span>
 	</h3>
 	@prototype
 	@doc
@@ -25,5 +25,3 @@
 		</div>
 	@end
 </div>
-	
-
