--- a/templates/type_prototype.html
+++ b/templates/type_prototype.html
@@ -1,5 +1,8 @@
-@require(constant_name, constant_value)
+@require(directive, type_name, name)
 
 <pre class="programlisting">
-#define @constant_name @constant_value
+@if directive:
+@directive \
+@end
+@type_name @name
 </pre>
