More refactoring, close to goal, looks pretty good.

--- a/templates/class.html
+++ b/templates/class.html
@@ -43,7 +43,8 @@
 		<a href="#aliases">Aliases</a>
 	@end
 
-	<h1 class="class">@klass.argname</h1>
+	<a name="@klass.type_name"></a>
+	<h1 class="class">@klass.type_name</h1>
 	<p>@short_description</p>
 
 	<div class="refentry">
