All links should be done now

--- a/templates/parameter_detail.html
+++ b/templates/parameter_detail.html
@@ -1,7 +1,7 @@
 @require(param_name, param_detail)
 <tr>
 	<td class="parameter_name">
-		<p>@param_name:</p>
+		<p>@param_name</p>
 	</td>
 	<td class="parameter_description"><p>@param_detail</p></td>
 </tr>
