--- a/templates/enum_detail.html
+++ b/templates/enum_detail.html
@@ -20,7 +20,7 @@
 						@for member in enum.members:
 						<tr>
 							<td class="enum_member_name">
-								<p>@member.type_name:</p>
+								<p><a name=@member.type_name></a>@member.type_name:</p>
 							</td>
 							<td class="enum_member_description">@member.formatted_doc</td>
 						</tr>
