--- a/templates/summary.html
+++ b/templates/summary.html
@@ -4,7 +4,8 @@
 	<table>
 		<colgroup>
 			<col width="150px" />
-			<col />
+			<col width="300px" />
+			<col width="200px" />
 		</colgroup>
 		@for summary in summaries:
 		@summary
