Gaaaaah ... pretty close once again ^^

--- a/templates/callable.html
+++ b/templates/callable.html
@@ -1,11 +1,11 @@
-@require(prototype, function, return_value, parameters)
+@require(prototype, callable, return_value, parameters, callable_type)
 <div class="refsect2">
-	<a name=@function.link.title></a>
+	<a name=@callable.link.id_></a>
 	<h3 class="method">
-		<span class="entry" id=@function.link.title>The <code>“@function.link.title”</code> method</span>
+		<span class="entry" id=@callable.link.id_>The <code>“@callable.link.title”</code> @callable_type</span>
 	</h3>
 	@prototype
-	@function.formatted_doc
+	@callable.formatted_doc
 	@if parameters:
 		<div class="refsect3">
 			<h4>Parameters</h4>
