Full coverage of gst, yay \o/

--- a/templates/class2.html
+++ b/templates/class2.html
@@ -41,7 +41,11 @@
 <h2>
 	@symbols_detail.name
 </h2>
-@for description in symbols_detail.descriptions:
+@for i, description in enumerate(symbols_detail.descriptions):
+
+@if i != 0:
+<hr></hr>
+@end
 @description
 @end
 @end
