--- a/templates/parameter_detail.html
+++ b/templates/parameter_detail.html
@@ -1,7 +1,9 @@
 @require(name, detail, annotations)
 <tr>
 	<td class="parameter_name">
-		<p>@name</p>
+		<p>
+		@name
+		</p>
 	</td>
 	<td class="parameter_description"><p>@detail</p></td>
 	<td class="parameter_annotations">
