Annotations are back

--- a/templates/callable.html
+++ b/templates/callable.html
@@ -1,4 +1,4 @@
-@require(prototype, callable, return_value, parameters, callable_type)
+@require(prototype, callable, return_value, return_annotations, parameters, callable_type)
 <div class="refsect2">
 	<a name=@callable.link.id_></a>
 	<h3 class="method">
@@ -31,5 +31,20 @@
 			<h4>Returns</h4>
 			@return_value.formatted_doc
 		</div>
+		@if return_annotations:
+		<p>
+			@for annotation in return_annotations:
+				<span class="annotation">[\
+				<acronym title="@annotation.help_text">\
+				<span class="acronym">@annotation.nick</span>\
+				</acronym>\
+				@if annotation.value:
+				@annotation.value\
+				@end
+				]\
+				</span>
+			@end
+		</p>
+		@end
 	@end
 </div>
