--- a/templates/property.html
+++ b/templates/property.html
@@ -10,7 +10,7 @@
 
 @if property.flags:
 <p>Flags:\
-@for i, flag in enumerate (flags):
+@for i, flag in enumerate (property.flags):
 
 @if i != 0:
 /\
