--- a/templates/callable.html
+++ b/templates/callable.html
@@ -1,4 +1,4 @@
-@require(prototype, callable, return_value, return_annotations, parameters, callable_type)
+@require(prototype, callable, return_value, return_annotations, parameters, callable_type, flags)
 <div class="refsect2">
 	<a name=@callable.link.id_></a>
 	<h3 class="method">
@@ -46,5 +46,21 @@
 			@end
 		</p>
 		@end
+	@end
+
+	@if flags:
+	<p>Flags:\
+	@for i, flag in enumerate (flags):
+
+	@if i != 0:
+	/\
+	@end
+
+	@if flag.link:
+	<a href="@flag.link">@flag.nick</a>
+	@else:
+	@flag.nick
+	@end
+	@end
 	@end
 </div>
