--- a/templates/page.html
+++ b/templates/page.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta content='text/html; charset=UTF-8' />
