--- a/templates/property_summary.html
+++ b/templates/property_summary.html
@@ -1,4 +1,4 @@
-@require(property_type, property_link)
+@require(property_type, property_link, flags)
 <tr>
     <td class="property_type">
 	    <span>@property_type</span>
@@ -6,4 +6,21 @@
     <td class="property_name">
 	    <span>@property_link</span>
     </td>
+
+@if flags:
+<td class="signal_flags">
+@for i, flag in enumerate (flags):
+
+@if i != 0:
+/\
+@end
+
+@if flag.link:
+<a href="@flag.link">@flag.nick</a>
+@else:
+@flag.nick
+@end
+@end
+</td>
+@end
 </tr>
