Expose enumeration members values

--- a/templates/member_list.html
+++ b/templates/member_list.html
@@ -6,9 +6,9 @@
 	<div class="informaltable">
 		<table width="100%" border="0">
 			<colgroup>
-				<col class="struct_members_name" width="300px" />
-				<col class="struct_members_description" />
-				<col class="struct_members_annotations" width="200px"/>
+				<col class="members_name" width="300px" />
+				<col class="members_description" />
+				<col class="members_value" width="200px"/>
 			</colgroup>
 			<tbody>
 			@for member in members:
