Return value for macros and callbacks, other tags

--- a/templates/callable.html
+++ b/templates/callable.html
@@ -63,4 +63,12 @@
 	@end
 	@end
 	@end
+
+	@for tag in callable.tags:
+	<p>
+	@tag.name\
+	@if tag.description:
+       	: @tag.description
+	</p>
+	@end
 </div>
