--- a/templates/property.html
+++ b/templates/property.html
@@ -3,7 +3,7 @@
 <div class="refsect2">
 	<a name=@property.link.id_></a>
 	<h3 class="method">
-		<span class="entry" id=@property.link.id_>The <code>“@property.link.title”</code> property</span>
+		<span class="entry">The <code>“@property.link.title”</code> property</span>
 	</h3>
 	@prototype
 	@property.formatted_doc
