--- a/better_doc_tool/formatters/templates/page.html
+++ b/better_doc_tool/formatters/templates/page.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta content='text/html; charset=UTF-8' />
-	<link rel="stylesheet" href="../style.css" type="text/css" />
+	<link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 @def content():
 @end
