--- a/better_doc_tool/extensions/templates/property_summary.html
+++ b/better_doc_tool/extensions/templates/property_summary.html
@@ -8,7 +8,7 @@
     </td>
 
 @if flags:
-<td class="signal_flags">
+<td class="signal_flags" style="text-align:right;">
 @for i, flag in enumerate (flags):
 
 @if i != 0:
