--- a/hotdoc/formatters/html/templates/member_list.html
+++ b/hotdoc/formatters/html/templates/member_list.html
@@ -1,8 +1,8 @@
-@require(members)
+@require(members, member_designation)
 
 @if members:
 <div class="refsect3">
-	<h4>Members</h4>
+	<h4>@member_designation</h4>
 	<div class="informaltable">
 		<table width="100%" border="0">
 			<colgroup>
