--- a/hotdoc/formatters/html/templates/page.html
+++ b/hotdoc/formatters/html/templates/page.html
@@ -1,9 +1,11 @@
+@require(stylesheet)
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta content='text/html; charset=UTF-8' />
-	<link rel="stylesheet" href="style.css" type="text/css" />
+	<link rel="stylesheet" href=@stylesheet type="text/css" />
 </head>
 @def content():
 @end
