--- a/hotdoc/formatters/html/templates/struct.html
+++ b/hotdoc/formatters/html/templates/struct.html
@@ -4,7 +4,10 @@
 	<h3>
 		struct @struct.link.title
 	</h3>
+	@if raw_code:
 	@raw_code
+	@end
+\
 	@if struct.formatted_doc:
 	@struct.formatted_doc
 	@end
