gi-extension: Switch back to gir instead of dump.
Unfortunately the amount of idiocy the code now has to deal with
is pretty damn high. I'll keep the gir dependency minimal for
this reason.

--- a/hotdoc/extensions/templates/python_prototype.html
+++ b/hotdoc/extensions/templates/python_prototype.html
@@ -1,4 +1,4 @@
-@require(return_value, function_name, parameters, c_name, throws)
+@require(return_value, function_name, parameters, c_name, throws, out_params)
 <pre class="programlisting">
 @if parameters:
 @@accepts (\
@@ -13,7 +13,13 @@
 )
 \
 @if return_value:
-@@returns(@return_value.formatted_link)
+@@returns(@return_value.formatted_link\
+@for p in out_params:
+, \
+@p.formatted_link\
+@end
+\
+)
 @end
 \
 @if throws:
