--- a/hotdoc/extensions/templates/gi_return_value.html
+++ b/hotdoc/extensions/templates/gi_return_value.html
@@ -1,4 +1,4 @@
-@require(annotations)
+@require(annotations, out_parameters)
 @extends('return_value.html')
 
 @def extension():
@@ -18,4 +18,9 @@
 	@end
 </p>
 @end
+
+@for out_param in out_parameters:
+@out_param
+@end
+
 @end
