More work on multi-language, looking good

--- a/hotdoc/extensions/templates/python_prototype.html
+++ b/hotdoc/extensions/templates/python_prototype.html
@@ -1,4 +1,4 @@
-@require(return_value, function_name, parameters, c_name, throws, out_params)
+@require(return_value, function_name, parameters, comment, throws, out_params, is_method)
 <pre class="programlisting">
 @if parameters:
 @@accepts (\
@@ -8,10 +8,19 @@
 @if i != 0:
 , \
 @end
+\
+@for j in range (parameter.array_nesting):
+[\
+@end
 @parameter.formatted_link\
+@for j in range (parameter.array_nesting):
+]\
+@end
+\
 @end
 )
 \
+@end
 @if return_value:
 @@returns(@return_value.formatted_link\
 @for p in out_params:
@@ -28,13 +37,19 @@
 \
 def @function_name\
  (\
+@if is_method:
+self\
+@end
+\
 @if parameters:
 \
 @for i, parameter in enumerate (parameters):
-@if i != 0:
+@if i != 0 or is_method:
 , \
 @end
 @parameter.argname\
 @end
+\
+@end
 ):
-    #Python wrapper for @c_name</pre>
+    #@comment</pre>
