--- a/hotdoc/formatters/html/templates/summary.html
+++ b/hotdoc/formatters/html/templates/summary.html
@@ -1,5 +1,7 @@
 @require(summary_type, summaries)
+@if summary_type:
 <h2>@summary_type</h2>
+@end
 <div class="informaltable">
 	<table>
 		<colgroup>
